// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlaceAutocomplete /> renders correctly 1`] = `
<PlaceAutocomplete
  onChange={[Function]}
  onError={[Function]}
  placeholder="New York, NY"
  withoutGeoCoords={false}
/>
`;

exports[`<PlaceAutocomplete /> renders correctly with custom placeholder 1`] = `
<PlaceAutocomplete
  onChange={[Function]}
  onError={[Function]}
  placeholder="From..."
  withoutGeoCoords={false}
/>
`;
